# mood-norrlandsgatan

./: .gitignore  BOM.md  CNAME  INTERACTION.md  README.md  bom.py  channels.py  export_panels.py  index.html  neon-check.html  optimize_layout.py  outline_close.py  panelize.py  panelize_mixed.py
cad/: PROTOTYPE.md  ai_import.py  bendlab.html  calibrate.py  ceiling.json  ceiling_import.py  channel.py  detail.py  figure.py  index.html  options.py  order.py  pyproject.toml  render.py  shaper_coupon.py  svgcheck.py
cad/assets/: building.glb
