[project]
name = "mood-cad"
version = "0.1.0"
description = "Parametric LED-channel CAD for the Mood Norrlandsgatan ceiling artwork"
requires-python = ">=3.11,<3.13"
dependencies = [
    "build123d>=0.8",
    "trimesh>=4.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

# Pin a build123d-friendly interpreter (matches the wysiwyg/cad reference repo).
[tool.uv]
python-preference = "managed"
